@@ -35,7 +35,7 @@ object MasterCfLinesTest {
   val lines = bad.BadTrackerCfLinesTest.lines ++      // 2 bad
               bad.CorruptedCfLinesTest.lines ++       // 1 bad
               bad.InvalidCfLinesTest.lines ++         // 3 bad  = 6 BAD
-              good.Aug2013CfLineTest.lines ++       // 1 good
+              good.Aug2013CfLineTest.lines ++         // 1 good
               good.PagePingCfLineTest.lines ++        // 1 good
               good.PageViewCfLineTest.lines ++        // 1 good
               good.StructEventCfLineTest.lines ++     // 1 good
@@ -58,7 +58,7 @@ object MasterCfLinesTest {
 class MasterCfLinesTest extends Specification with TupleConversions {
 
   "A job which processes a CloudFront file containing 6 valid events, 6 bad lines and 3 discardable lines" should {
-    EtlJobTest.
+    EtlJobTest("0").
       source(MultipleTextLineFiles("inputFolder"), MasterCfLinesTest.lines).
       sink[String](Tsv("outputFolder")){ output =>
         "write 6 events" in {
