@@ -152,7 +152,7 @@ object TransactionItemCfLineTest {
 class TransactionItemCfLineTest extends Specification with TupleConversions {
 
   "A job which processes a CloudFront file containing 1 valid transaction item" should {
-    EtlJobTest.
+    EtlJobTest("0").
       source(MultipleTextLineFiles("inputFolder"), TransactionItemCfLineTest.lines).
       sink[TupleEntry](Tsv("outputFolder")){ buf : Buffer[TupleEntry] =>
         "correctly output 1 transaction item" in {
