@@ -7,9 +7,10 @@ Hadoop ETL: added makeTsvSafe to ConversionUtils (#338)
 Hadoop ETL: added JsonUtils (#323)
 Hadoop ETL: added support for 3 and 4 return values from MapTransformer (#324)
 Hadoop ETL: updated GetJsonPayload to use Argonaut and renamed to JsonPayload (#339)
+Hadoop ETL: added ability to mask IP addresses in ETL (#309)
 
+Hadoop ETL: fixed unescaped % in URL is converted to \00 and breaks Postgres load (#347) - TODO
 Hadoop ETL: fixed ongoing issue with spaces in URLs (#346) - TODO
-Hadoop ETL: added ability to mask IP addresses in ETL (#309) - TODO
 
 EmrEtlRunner: bumped to 0.5.0
 EmrEtlRunner: bumped Sluice to 0.1.3 (#96)
